--- a/arch/arm64/configs/Qwerty_ysl_defconfig
+++ b/arch/arm64/configs/Qwerty_ysl_defconfig
@@ -2,6 +2,27 @@ CONFIG_LOCALVERSION="-Qwerty_UBUNTU"
 #CONFIG_USELIB is not set
 
 #UBUNTU_THING
+CONFIG_SQUASHFS_XATTR=y
+CONFIG_SQUASHFS_ZLIB=y
+CONFIG_SQUASHFS_LZO=y
+CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
+CONFIG_DECOMPRESS_GZIP=y
+CONFIG_DECOMPRESS_BZIP2=y
+CONFIG_DECOMPRESS_LZMA=y
+CONFIG_DECOMPRESS_XZ=y
+CONFIG_POSIX_MQUEUE_SYSCTL=y
+CONFIG_RD_XZ=y
+CONFIG_NET_CLS_CGROUP=y
+CONFIG_RAW_DRIVER=y
+CONFIG_XOR_BLOCKS=y
+CONFIG_RAID6_PQ=y
+CONFIG_XZ_DEC=y
+CONFIG_XZ_DEC_BCJ=y
+CONFIG_XZ_DEC_ARM=y
+CONFIG_XZ_DEC_ARMTHUMB=y
+CONFIG_ANBOX=y
+CONFIG_ANBOX_BINDER_IPC=y
+CONFIG_ANBOX_BINDER_IPC_32BIT=n
 CONFIG_CPUSETS=y
 CONFIG_AUTOFS4_FS=y
 CONFIG_TMPFS_XATTR=y
@@ -174,8 +195,11 @@ CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_EVM_HMAC_VERSION=2
-#ENDUBUTNU
+#ENDUBUNTU
 
+CONFIG_QUOTA_TREE=y
+CONFIG_QFMT_V2=y
+CONFIG_QUOTACTL=y
 CONFIG_BLOCK_UNWANTED_FILES=y
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_FORCE_FAST_CHARGE=y
@@ -475,7 +499,7 @@ CONFIG_CNSS=y
 CONFIG_CNSS_SDIO=y
 CONFIG_CNSS_PCI=y
 CONFIG_CLD_HL_SDIO_CORE=y
-CONFIG_WIL6210=m
+CONFIG_WIL6210=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
