Enable CONFIG_SWITCH_H2W

--- a/arch/arm64/configs/Qwerty_ysl_defconfig
+++ b/arch/arm64/configs/Qwerty_ysl_defconfig
@@ -5,6 +5,7 @@ CONFIG_LOCALVERSION="-Qwerty_UBUNTU"
 CONFIG_CPUSETS=y
 CONFIG_AUTOFS4_FS=y
 CONFIG_TMPFS_XATTR=y
+CONFIG_SWITCH_H2W=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
