--- a/arch/arm64/configs/Qwerty_ysl_defconfig
+++ b/arch/arm64/configs/Qwerty_ysl_defconfig
@@ -130,7 +130,7 @@ CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 #CONFIG_CGROUP_SCHEDTUNE is not set
 #CONFIG_NETPRIO_CGROUP is not set
-#CONFIG_NET_CLS_CGROUP is not set
+CONFIG_NET_CLS_CGROUP=y
 #CONFIG_FW_LOADER_USER_HELPER is not set
 #CONFIG_ANDROID_PARANOID_NETWORK is not set
 #CONFIG_USB_CONFIGFS_QCRNDIS is not set
@@ -174,7 +174,26 @@ CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_EVM_HMAC_VERSION=2
-#ENDUBUTNU
+CONFIG_POSIX_MQUEUE=y
+CONFIG_POSIX_MQUEUE_SYSCTL=y
+CONFIG_CGROUP_NET_CLASSID=y
+CONFIG_VETH=y
+CONFIG_ANBOX=y
+CONFIG_ANBOX_BINDER_IPC=y
+CONFIG_SQUASHFS=y
+CONFIG_SQUASHFS_DECOMP_SINGLE=y
+CONFIG_SQUASHFS_ZLIB=y
+CONFIG_SQUASHFS_XZ=y
+CONFIG_XZ_DEC=y
+CONFIG_XZ_DEC_X86=y
+CONFIG_XZ_DEC_POWERPC=y
+CONFIG_XZ_DEC_IA64=y
+CONFIG_XZ_DEC_ARM=y
+CONFIG_XZ_DEC_ARMTHUMB=y
+CONFIG_XZ_DEC_SPARC=y
+CONFIG_XZ_DEC_BCJ=y
+# CONFIG_ANBOX_BINDER_IPC_32BIT is not set
+#ENDUBUNTU
 
 CONFIG_BLOCK_UNWANTED_FILES=y
 CONFIG_DYNAMIC_FSYNC=y
